* 4.0.0 *

*Removed deadlock victim retry in favor of Isolation Level

* 3.2.12 *

* Revert string_to_binary changes in 457af60e. Fixes #273.


* 3.2.11 *

* Handle "No such column" when renaming some columns in the migrations. Fixes #237. Thanks @michelgrootjans.
* Update regex for `RecordNotUnique` exception. Fixes #257. Thanks @pbatorre.
* Pass tds_version to TinyTDS. Fixes #233. Thanks @denispeplin.
* Use CONCAT_NULL_YIELDS_NULL for all TinyTDS connections. Fixes #262. Thanks @noel.
* Fix for Azure SQL. Fixed #263. Thanks @eklipse2k8.
* Drop shoulda and use minitest-spec-rails!!!
* Test TinyTDS 0.6.0.
* Fixed the unit tests due to changes in ActiveRecord that removes blank config values.
* Fixed explain tests that were failing due to changes in ExplainSubscriber, cause was regex
* Fixed change_column to update existing table column rows with new default value if there are any NULL values
  and the column does not accept nulls
* Fixed change_column to drop and add indexes if the colun type is changes
* Fixed string_to_binary and binary_to_string in some cases where the binary data is not UTF-8
* Fixing generating profile report to create output dir if needed, and code change for printing report
* Adding ruby-prof to Gemfile, needed when running profile test cases
* Updating mocha to work with newer ActiveRecord test cases


* 3.2.10 *

* Remove connection defaults for host/username/password. Since we want to suppoert Windows Authentication
  and there are just to many possibilities. So we now have to be explicit.
* Remove really old TinyTDS warning.


* 3.2.9 *

* The #remove_default_constraint uses #execute_procedure now. Fixes #223. Thanks @gicappa and @clintmiller.
* Mimic other adapters quoting for empty strings passed to integer columns. Fixes #164.
* Allow named parameters in stored procedures. Fixes #216. Thanks @sixfeetover.
* Make sure exclude [__rnt] table names form relation reflection. Fixes #219 and #221. Thanks @sphogan.


* 3.2.8 *
